adapters/custom-adapter/overlays/custom-adapter-headers-middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: custom-adapter-headers-middleware
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: 'https'
      X-Forwarded-Port: '443'
