adapters/custom-adapter/overlays/custom-adapter-inflightreq-middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: custom-adapter-inflightreq-middleware
spec:
  inFlightReq:
    amount: 100
# protection aux attaques DDOS
